[package]
name = "combustion"
version = "0.1.0"
authors = ["Brent Carmer <bcarmer@gmail.com>"]
edition = "2018"

[lib]
doctest = false

[[bin]]
name = "combustion"
path = "src/bin/combustion.rs"
test = false

[[bin]]
name = "benchmark"
path = "src/bin/benchmark.rs"
test = false

[dependencies]
rand = "0.7.2"
regex = "1.3.1"
getopts = "0.2.21"
num_cpus = "1.11.1"
libc = "0.2.66"
